<resources>
    <string name="app_name">Hotel Booking</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="name">name</string>
    <string name="name1">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="where_do_you_want_to_go_next">Where do you want to go next?</string>
    <string name="depart_on">Depart On</string>
    <string name="return_on">Return On</string>
    <string name="search">Search</string>
    <string name="hotel_booking">Hotel Booking</string>
    <string name="back">back</string>
    <string name="popular_hotels">Popular Hotels</string>
    <string name="see_all">See All</string>
    <string name="profile">Profile</string>
    <string name="emre_semiz">Emre Semiz</string>
    <string name="password2">Password:</string>
    <string name="change">Change</string>
    <string name="mobile">Mobile:</string>
    <string name="_1234_123_9874">1234-123-9874</string>
    <string name="tell">Tell:</string>
    <string name="_1234_123_9874_2">1234-123-9874</string>
    <string name="address">Address:</string>
    <string name="ny_street_21_no_34">NY- Street 21-no 34</string>
    <string name="postalcode">PostalCode:</string>
    <string name="_9871234567">9871234567</string>
    <string name="search_results">Search Results</string>
    <string name="search_results_content">This section contains search results for hotels.</string>
    <string name="hotel_list">List of hotels with their images, names, and locations.</string>
    <string name="navigation">Bottom navigation menu</string>
    <string name="room_list">Room List</string>
    <string name="booking_now">Booking Now</string>
    <string name="comments">Comments</string>
    <string name="profile_image" />
    <string name="name_hint" />
</resources>