<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background"
    tools:context=".ProfileActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/upperProfile">

        <ImageView
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/arrow_50"
            android:contentDescription="@string/back"
            android:layout_margin="15dp"
            android:padding="8dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profile"
            android:id="@+id/dashboardText"
            android:textSize="36sp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_centerInParent="true"/>

        <ImageView
            android:id="@+id/editButton"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/img"
            android:contentDescription="@string/back"
            android:layout_margin="15dp"
            android:layout_alignParentEnd="true"
            android:padding="8dp"/>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/profileLl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/upperProfile"
        android:layout_above="@id/bottomNavigationView"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/profileImageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/default_profile_image"
        app:shapeAppearanceOverlay="@style/styleRoundedCornersImage"
        app:strokeColor="@android:color/transparent"
        app:strokeWidth="0dp"
        android:scaleType="centerCrop"
        />

        <TextView
            android:id="@+id/nameTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/name"
            android:textSize="24sp"
            android:textColor="@color/white"/>

        <LinearLayout
            android:id="@+id/detailsLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            android:padding="10dp"
            android:background="@drawable/white_background">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_marginBottom="16dp">

                <TextView
                    android:id="@+id/emailTv"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    android:textSize="18sp"
                    android:textColor="@color/black"/>

                <TextView
                    android:id="@+id/emailValueTv"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:text="Email Address" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_marginBottom="16dp">

                <TextView
                    android:id="@+id/phoneNumberTv"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="Phone Number"
                    android:textSize="18sp"
                    android:textColor="@color/black"/>

                <TextView
                    android:id="@+id/phoneNumberValueTv"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:text="Phone Number" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_marginBottom="16dp">

                <TextView
                    android:id="@+id/addressTv"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/address"
                    android:textSize="18sp"
                    android:textColor="@color/black"/>

                <TextView
                    android:id="@+id/addressValueTv"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:text="Address" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical">

                <TextView
                    android:id="@+id/postalCodeTv"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="Postal Code"
                    android:textSize="18sp"
                    android:textColor="@color/black"/>

                <TextView
                    android:id="@+id/postalCodeValueTv"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:text="Postal Code" />

            </LinearLayout>

        </LinearLayout>

        <Button
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:text="Log Out"
            android:id="@+id/LogOutButton"
            android:textSize="18sp"
            android:layout_marginTop="50dp"
            android:backgroundTint="@color/white"
            android:textColor="@color/black"
            app:cornerRadius="20dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"/>

    </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_alignParentBottom="true"
        app:menu="@menu/bottom_nav_menu"/>

</RelativeLayout>
